# lab_demo

./: .gitignore  README.md  demands.csv  forecast.csv  productivity_map.csv  pyproject.toml  solution.csv  user_testing.py
src/lab_demo/: __init__.py  config.py  forecast.py  machine.py  problem.py  products.py  shifts.py  solver.py  util.py
src/lab_demo/data_files/: sales_forecast.csv
